...
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_local_multiplayer"
        android:title="@string/menu_local_multiplayer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_host_game"
        android:title="@string/menu_host_game"
        app:showAsAction="never" />
...
