...
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayersLabel"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartGame"
        tools:listitem="@layout/item_player_row" />

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="0dp"
        android:layout_height="48dp"
...
